# trenchess

./: .gitignore  .tool-versions  README.md  index.html  index.ts  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy_pages.yml
rust-engine/: Cargo.toml
rust-engine/src/: constants.rs  engine.rs  lib.rs
src/: App.tsx  Board.tsx  p2p.ts
src/engine/: index.ts  perft.ts  uciWrapper.ts
src/hooks/: useRustEngine.ts
